# async-py-api

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
app/: conf.py  main.py  utils.py
app/conf/: db.py  settings.py
app/model/: todo.py
app/models/: todo.py
app/routes/: todos.py
app/tests/: fixtures.py  test_todos.py
migrations/: env.py
migrations/versions/: 190d5f240f2f_inital_migration.py
