[project]
name = "async_py_api"
version = ""
description = ""
authors = [
    {name = "Douglas Harrington Muhone", email = "doug@dhmgroup.net"},
]
dependencies = [
    "fastapi>=0.78.0",
    "sqlmodel>=0.0.6",
    "python-dotenv>=0.20.0",
    "uvicorn>=0.18.1"]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
]

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload"
start = "uvicorn app.main:app -h 0.0.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
